trying to debug/fix drilling alignment

--- a/frontend/src/gui/viewer/style.less
+++ b/frontend/src/gui/viewer/style.less
@@ -4,6 +4,7 @@
     flex-direction: row;
     align-items: flex-start;
     margin-top: 40px;
+    flex-wrap: wrap;
   }
 }
 
